<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".welcome.CreateGroupActivity"
        tools:ignore="LabelFor">


    <Button
            android:text="@string/gruppe_erstellen"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:id="@+id/gruppeErstellen"
            app:layout_constraintStart_toStartOf="parent"
            android:backgroundTint="@color/deepblack"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="15dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:cornerRadius="16dp" />

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/gruppenname"
            android:ems="10"
            android:id="@+id/textFieldName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:minHeight="48dp"
            android:textColor="@color/deepblack"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="20dp" />

    <TextView
            android:text="@string/group_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textViewNameInfo"
            android:textColor="@color/brandred"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textFieldName"
            android:layout_marginStart="24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>