<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".purchasing.PurchasingActivity">

    <Button
            android:text="@string/gesamt"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:id="@+id/totalBtn2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/singleBtn2"
            android:backgroundTint="@color/deepblack"
            app:strokeColor="@color/deepblack"
            app:strokeWidth="2dp"
            android:textColor="@color/white"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="15dp"
            app:cornerRadius="16dp" />

    <Button
            android:text="@string/einzeln"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:id="@+id/singleBtn2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/totalBtn2"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="@color/white"
            app:strokeColor="@color/deepblack"
            app:strokeWidth="2dp"
            android:textColor="@color/deepblack"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="15dp"
            app:cornerRadius="16dp" />

    <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/totalBtn2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toTopOf="@+id/roundedBottom"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0"
            android:id="@+id/scroll"
            android:orientation="vertical">

    </LinearLayout>

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/roundedBottom"
            android:background="@drawable/rounded">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/pricingBottom"
                android:paddingTop="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

            <TextView
                    android:text="@string/gesamt_bezahlt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView3"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginBottom="15dp"
                    app:layout_constraintBottom_toTopOf="@+id/confirmBuyBtn2"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/icegrey"
                    android:layout_marginStart="32dp"
                    android:hint="0,00€" />

            <TextView
                    android:id="@+id/euroSign"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/euro_placeholder"
                    android:textColor="@color/icegrey"
                    android:textFontWeight="1000"
                    android:textSize="20sp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="15dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/confirmBuyBtn2" />

            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="3"
                    android:id="@+id/totalPrice"
                    app:layout_constraintEnd_toStartOf="@id/euroSign"
                    app:layout_constraintBottom_toTopOf="@+id/confirmBuyBtn2"
                    android:hint="@string/price_placeholder"
                    android:textColorHint="@color/coolgrey"
                    android:layout_marginBottom="5dp"
                    android:textStyle="bold"
                    android:textColor="@color/icegrey"
                    android:backgroundTint="@color/icegrey"
                    android:textSize="16sp" />

            <Button
                    android:text="@string/einkauf_best_tigen"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:id="@+id/confirmBuyBtn2"
                    android:layout_marginEnd="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="15dp"
                    android:backgroundTint="@color/brandred"
                    app:cornerRadius="16dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>